@startuml
class BenefactorVerification <<partial>> {
}
class BenefactorVerificationModel {
    + InstitutionName : string <<get>> <<set>>
    + InstitutionType : string? <<get>> <<set>>
    + Address : string <<get>> <<set>>
    + Website : string? <<get>> <<set>>
    + Description : string? <<get>> <<set>>
    + ContactNumber : string <<get>> <<set>>
    + ContactEmail : string <<get>> <<set>>
    + AdminFirstName : string <<get>> <<set>>
    + AdminMiddleName : string? <<get>> <<set>>
    + AdminLastName : string <<get>> <<set>>
    + Sex : string <<get>> <<set>>
    + Nationality : string <<get>> <<set>>
    + AdminPosition : string? <<get>> <<set>>
    + AdminEmail : string <<get>> <<set>>
    + AdminContactNumber : string <<get>> <<set>>
    + Accreditation : string? <<get>> <<set>>
    + DeanName : string <<get>> <<set>>
    + DeanEmail : string <<get>> <<set>>
}
class UploadResult {
    + url : string? <<get>> <<set>>
}
ComponentBase <|-- BenefactorVerification
BenefactorVerification +-- BenefactorVerificationModel
BenefactorVerificationModel --> "BirthDate" DateTime
BenefactorVerification +-- UploadResult
@enduml
